# suite-actuarial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTIC_REPORT.md  Dockerfile  FASE_5D_SUMMARY.txt  LICENSE  MANIFEST.in  NEXT_STEPS.md  README.md  REMAINING_TEST_FAILURES_ANALYSIS.md  TEST_FAILURES_ANALYSIS.md  claude.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agent-memory/actuarial-test-architect/: MEMORY.md  project_testing_patterns.md
.github/workflows/: ci.yml  deploy.yml
data/mortality_tables/: README.md  emssa_09.csv
docs/: FASE_5B_SUMMARY.txt  ISSUES_TEST_FAILURES.md  ISSUE_MANAGEMENT_BEST_PRACTICES.md  JOURNAL.md  REGULATORY.md  VALIDATION.md  resumen_ejecutivo.html
docs/portfolio/: blog-en.md  blog-es.md  projects-ts-patch.md
examples/: 01_introduccion_productos_vida.ipynb  01_pricing_vida_temporal.ipynb  02_reaseguro.ipynb  02_reservas_ibnr.ipynb  03_pension_imss.ipynb  03_reservas_tecnicas.ipynb  04_cotizacion_auto.ipynb  04_cumplimiento_cnsf.ipynb  05_validaciones_sat.ipynb  06_reportes_cnsf.ipynb  07_casos_practicos_completos.ipynb  README.md
examples/data/: cartera_ejemplo.csv  inversiones_ejemplo.csv  siniestros_ejemplo.csv  triangulo_ejemplo.csv
frontend/: Dockerfile.dev  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useCalculation.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
notebooks/: pipeline_completo.ipynb
src/mexican_insurance/: __init__.py  cli.py
src/mexican_insurance/actuarial/: __init__.py
src/mexican_insurance/api/: __init__.py  main.py
src/mexican_insurance/core/: __init__.py  base_product.py  validators.py
src/mexican_insurance/products/: __init__.py
src/mexican_insurance/regulatorio/: __init__.py  agregador_rcs.py  rcs_danos.py  rcs_inversion.py  rcs_vida.py
src/mexican_insurance/reinsurance/: __init__.py  base_reinsurance.py  excess_of_loss.py  quota_share.py  stop_loss.py
src/mexican_insurance/reportes/: __init__.py  exportadores.py  generador_inversiones.py  generador_rcs.py  (+3 more)
src/suite_actuarial/: __init__.py  cli.py
streamlit_app/: Home.py  README.md  requirements.txt
streamlit_app/pages/: 1_Vida.py  1_📊_Productos_Vida.py  2_Danos.py  2_📋_Cumplimiento.py  3_Salud.py  3_📈_Reservas.py  4_Pensiones.py  5_Reservas.py  6_Regulatorio.py  7_Reaseguro.py
streamlit_app/utils/: __init__.py  calculations.py  visualizations.py
subagents_outputs/: audit_report.md
tests/: __init__.py  conftest.py
tests/fixtures/: sample_claims_triangle.csv
tests/integration/: test_api_config.py  test_api_danos.py  test_api_pensiones.py  test_api_pricing.py  test_api_regulatory.py  test_api_reinsurance.py  test_api_reserves.py  test_api_root.py  test_api_salud.py
tests/unit/: test_actuarial_rigor.py  test_bootstrap.py  test_bornhuetter_ferguson.py  test_boundary_stress.py  test_chain_ladder.py  test_cli.py  test_danos_auto.py  test_danos_frecuencia_severidad.py  test_danos_incendio.py  test_danos_rc.py  test_danos_tarifas.py  test_excess_of_loss.py  test_factor_frecuencia.py  test_pensiones_conmutacion.py  test_pensiones_plan_retiro.py  test_pensiones_renta_vitalicia.py  test_pricing_cross_validation.py  test_quota_share.py  test_rcs_completo.py  test_rcs_danos.py  test_rcs_inversion.py  test_rcs_vida.py  test_reportes.py  test_reservas_tecnicas.py  test_salud_accidentes.py  test_salud_gmm.py  test_stop_loss.py  test_tablas_mortalidad.py  test_tasas.py  test_validaciones_sat.py  test_validators.py  test_vida_dotal.py  test_vida_ordinario.py  test_vida_temporal.py
(+144 files in other folders)
