[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suite-actuarial"
version = "2.0.0"
description = "Libreria actuarial fundamental para el mercado mexicano de seguros"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Andres Gonzalez Ortega", email = "andres@actuarial.dev"}
]
keywords = ["seguros", "actuarial", "mexico", "cnsf", "reinsurance", "pensiones", "danos", "salud", "gmm", "imss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

# Dependencias principales
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scipy>=1.11.0",
    "pydantic>=2.5.0",
    "polars>=0.19.0",
    "chainladder>=0.8.18",  # Para reservas
    "lifelines>=0.27.8",    # Análisis de supervivencia
    "openpyxl>=3.1.0",      # Excel I/O
    "pyarrow>=14.0.0",      # Parquet support
]

[project.optional-dependencies]
# Para desarrollo
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipython>=8.18.0",
]

# Para visualización y apps
viz = [
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

# Para bases de datos
db = [
    "sqlalchemy>=2.0.0",
    "duckdb>=0.9.0",
]

# Para API REST
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
]

# Todo junto
all = [
    "suite-actuarial[dev,viz,db,api]",
]

[project.scripts]
# CLI para usar desde terminal
seguros = "suite_actuarial.cli:main"

[project.urls]
Homepage = "https://github.com/GonorAndres/suite-actuarial"
Documentation = "https://github.com/GonorAndres/suite-actuarial#readme"
Repository = "https://github.com/GonorAndres/suite-actuarial"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
suite_actuarial = ["data/mortality_tables/*.csv", "data/mortality_tables/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=suite_actuarial",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (lo maneja el formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imports no usados están ok en __init__

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chainladder.*",
    "lifelines.*",
    "plotly.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
